--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ footer {
       <input type="text" id="reg-username" placeholder="Nazwa użytkownika" required>
       <input type="email" id="reg-email" placeholder="Email" required>
       <input type="password" id="reg-password" placeholder="Hasło" required>
-      <button type="submit" class="btn">Zarejestruuj</button>
+      <button type="submit" class="btn">Zarejestruj</button>
     </form>
 
     <div style="margin-top:10px;">
