--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const tabLogin = document.getElementById('tab-login');
     const tabRegister = document.getElementById('tab-register');
     const closeModalBtns = document.querySelectorAll('.close-modal');
-    const API_URL = 'http://89.213.45.50:5000';
+    const API_URL = 'http://89.213.45.50:5000/';
 
     // Otwieranie modalu
     siteLoginBtn.addEventListener('click', () => loginModal.classList.add('show'));
